syntax = "proto3";

option csharp_namespace = "Web.InternalApi";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

package time;

// The greeting service definition.
service TimeEnrichment {
  rpc CacheReady (CacheReadyRequest) returns (CacheReadyReply);

  rpc ProcessUserPlays (UserPlayList) returns (TotalPlayTimeReply);
}

message CacheReadyRequest {}
message CacheReadyReply {}

// A single user play event.
message SimpleUserPlay {
  int64 userPlayId = 1;
  string trackName = 2;
  string artistName = 3;
  int64 msPlayed = 4;
}

// The request message containing a list of user play events.
message UserPlayList {
  repeated SimpleUserPlay userPlays = 1;
}

// The response message containing the total play time as a TimeSpan.
message TotalPlayTimeReply {
  repeated SimpleUserPlay userPlays = 1;
  google.protobuf.Duration totalPlayTime = 2; // Total play time represented as a Duration
}
